--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test",
-    "prepublishOnly": "tsdx build"
+    "prepublishOnly": "tsdx build",
+    "prepare": "tsdx build"
   },
   "dependencies": {
     "@uniswap/v2-core": "^1.0.0",
