--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "tsdx watch",
     "test": "tsdx test",
     "prepublishOnly": "tsdx build",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "postinstall": "tsdx build"
   },
   "dependencies": {
     "@uniswap/v2-core": "^1.0.0",
