--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jediswap/sdk",
   "license": "MIT",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "🛠 An SDK for building applications on top of Jediswap.",
   "publishConfig": {
     "access": "public"
@@ -30,7 +30,7 @@
     "big.js": "^5.2.2",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.1",
-    "starknet": "^2.7.2",
+    "@jediswap/starknet": "^2.7.1",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
     "toformat": "^2.0.0"
