--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jediswap/sdk",
   "license": "MIT",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "🛠 An SDK for building applications on top of Jediswap.",
   "publishConfig": {
     "access": "public"
@@ -26,13 +26,13 @@
     "prepare": "tsdx build"
   },
   "dependencies": {
-    "@jediswap/starknet": "^2.7.2",
     "@types/bn.js": "^5.1.0",
     "@uniswap/v2-core": "^1.0.0",
     "big.js": "^5.2.2",
     "bn.js": "^5.2.0",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.1",
+    "starknet": "^3.2.0",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
     "toformat": "^2.0.0"
