--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/uniswap-sdk.git",
+  "repository": "https://github.com/jediswaplabs/jediswap-sdk.git",
   "keywords": [
-    "uniswap",
-    "ethereum"
+    "jediswap",
+    "ethereum",
+    "starknet"
   ],
   "module": "dist/sdk.esm.js",
   "scripts": {
@@ -26,10 +27,7 @@
     "prepare": "tsdx build"
   },
   "dependencies": {
-    "@types/bn.js": "^5.1.0",
-    "@uniswap/v2-core": "^1.0.0",
     "big.js": "^5.2.2",
-    "bn.js": "^5.2.0",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.1",
     "starknet": "^3.15.0",
@@ -37,26 +35,14 @@
     "tiny-warning": "^1.0.3",
     "toformat": "^2.0.0"
   },
-  "peerDependencies": {
-    "@ethersproject/address": "^5.0.0-beta",
-    "@ethersproject/contracts": "^5.0.0-beta",
-    "@ethersproject/networks": "^5.0.0-beta",
-    "@ethersproject/providers": "^5.0.0-beta",
-    "@ethersproject/solidity": "^5.0.0-beta"
-  },
   "devDependencies": {
-    "@ethersproject/address": "^5.0.2",
-    "@ethersproject/contracts": "^5.0.2",
-    "@ethersproject/networks": "^5.0.2",
-    "@ethersproject/providers": "^5.0.5",
-    "@ethersproject/solidity": "^5.0.2",
     "@types/big.js": "^4.0.5",
     "@types/jest": "^24.0.25",
     "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
     "tsdx": "^0.12.3"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=16"
   },
   "prettier": {
     "printWidth": 120,
