--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 dist
 node_modules
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 .idea
+.vscode
